# fbvg

./: CMakeLists.txt  README.md
src/: canvas.cpp  canvas.hpp  color.hpp  path.cpp  path.hpp  rasterizer.cpp  rasterizer.hpp  transform.hpp
src/util/: inttypes.hpp  math.hpp
tests/: main.cpp
